shannon latest transactions and title banners

--- a/archive/my-app/src/index.css
+++ b/archive/my-app/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -10,4 +10,46 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.activityBanner {
+  background-color: #EFEFEF;
+  color: #E7815A;
+  font-size: 16px;
+  font-family: "Poppins", "Times New Roman", Times, serif;
+  font-weight: 600;
+}
+
+
+.transactionBanner {
+  background-color: #EFEFEF;
+  color: #E7815A;
+  font-size: 16px;
+  font-family: "Poppins", "Times New Roman", Times, serif;
+  font-weight: 600;
+}
+
+.btn-warning{
+  position: center;
+  justify-content: center !important;
+  font-size: 16px;
+  font-family: "Poppins", "Times New Roman", Times, serif;
+  align-content: center;
+}
+
+/* this isnt working */
+.history{
+  box-shadow: #EFEFEF;
+}
+
+/* this isnt working */
+.CardText {
+  position: right !important;
+  bottom: 10px;
+  right: 10px;
+}
+
+/* this isnt working */
+.historyContainer{
+  overflow-y: scroll !important;
 }
