--- a/archive/my-app/src/index.css
+++ b/archive/my-app/src/index.css
@@ -43,13 +43,18 @@ code {
 }
 
 /* this isnt working */
-.CardText {
+.historyContainer{
+  overflow-y: scroll !important;
+}
+
+.cardTitle {
+  font-weight: 600 !important;
+  Color: #666666
+}
+
+/* not working */
+.amount{
   position: right !important;
   bottom: 10px;
   right: 10px;
-}
-
-/* this isnt working */
-.historyContainer{
-  overflow-y: scroll !important;
 }
