center logout btn and form boxes

--- a/archive/my-app/src/App.css
+++ b/archive/my-app/src/App.css
@@ -29,6 +29,7 @@
 .submitbutton {
     background-color: #E7815A !important;
     color: white !important;
+    margin-left: 8em !important;
 }
 .logoutbuttonrow {
     padding-left: 30px;
