--- a/archive/my-app/src/index.css
+++ b/archive/my-app/src/index.css
@@ -34,7 +34,8 @@ code {
   justify-content: center !important;
   font-size: 16px;
   font-family: "Poppins", "Times New Roman", Times, serif;
-  align-content: center;
+  margin-left: 3.5em;
+  font-weight: 500;
 }
 
 /* this isnt working */
@@ -57,4 +58,16 @@ code {
   position: right !important;
   bottom: 10px;
   right: 10px;
+}
+
+.dateform{
+  margin-left: 4em !important;
+}
+
+.itemform{
+  margin-left: 3.25em !important;
+}
+
+.amountform{
+  margin-left: 2.70em !important;
 }
