--- a/archive/my-app/src/index.css
+++ b/archive/my-app/src/index.css
@@ -18,6 +18,7 @@ code {
   font-size: 16px;
   font-family: "Poppins", "Times New Roman", Times, serif;
   font-weight: 600;
+  padding-left: 5%;
 }
 
 
@@ -27,6 +28,7 @@ code {
   font-size: 16px;
   font-family: "Poppins", "Times New Roman", Times, serif;
   font-weight: 600;
+  padding-left: 5%;
 }
 
 .btn-warning{
@@ -34,18 +36,9 @@ code {
   justify-content: center !important;
   font-size: 16px;
   font-family: "Poppins", "Times New Roman", Times, serif;
-  margin-left: 3.5em;
+  margin-left: 20%;
   font-weight: 500;
-}
-
-/* this isnt working */
-.history{
-  box-shadow: #EFEFEF;
-}
-
-/* this isnt working */
-.historyContainer{
-  overflow-y: scroll !important;
+  margin-bottom: 5%;
 }
 
 .cardTitle {
@@ -53,21 +46,20 @@ code {
   Color: #666666
 }
 
-/* not working */
-.amount{
-  position: right !important;
-  bottom: 10px;
-  right: 10px;
-}
-
-.dateform{
-  margin-left: 4em !important;
-}
-
 .itemform{
-  margin-left: 3.25em !important;
+  width: 250px;
+  margin-left: 15% !important;
+  padding-top: 5% !important;
 }
 
 .amountform{
-  margin-left: 2.70em !important;
+  width: 250px;
+  margin-left: 15% !important;
+  padding-top: 5% !important;
+}
+
+.dateform{
+  width: 250px;
+  margin-left: 15% !important;
+  padding-top: 5% !important;
 }
