--- a/archive/my-app/src/index.css
+++ b/archive/my-app/src/index.css
@@ -19,6 +19,8 @@ code {
   font-family: "Poppins", "Times New Roman", Times, serif;
   font-weight: 600;
   padding-left: 5%;
+  padding-top: 3%;
+  padding-bottom: 3%;
 }
 
 
@@ -29,6 +31,8 @@ code {
   font-family: "Poppins", "Times New Roman", Times, serif;
   font-weight: 600;
   padding-left: 5%;
+  padding-top: 3%;
+  padding-bottom: 3%;
 }
 
 .btn-warning{
@@ -36,14 +40,25 @@ code {
   justify-content: center !important;
   font-size: 16px;
   font-family: "Poppins", "Times New Roman", Times, serif;
-  margin-left: 20%;
+  margin-left: 15%;
   font-weight: 500;
   margin-bottom: 5%;
 }
 
-.cardTitle {
+.historytitle {
   font-weight: 600 !important;
   Color: #666666
+}
+
+.historydate{
+  font-size: .80em;
+}
+
+.historyamount{
+  font-weight: 700 !important;
+  text-align: right;
+  Color: #666666;
+  font-size: 1.1em;
 }
 
 .itemform{
@@ -62,4 +77,23 @@ code {
   width: 250px;
   margin-left: 15% !important;
   padding-top: 5% !important;
+}
+
+.amount{
+  text-align: right !important;
+}
+
+#sproutdesign{
+  display: none;
+}
+
+@media (min-width: 400px) {
+  :root {
+  display: none;
+  }
+/* not working */
+  #sproutdesign{
+    display: inline;
+  }
+
 }
